# OcrImg

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  base64test.cpp  ocrimg.cpp
src/conf/: tencent_key.json.exp
src/include/: base64.h
